--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-    <title>Document</title>
+    <title>Sign-Up Form</title>
 </head>
 <body>
-    
+    <p>welcome to big mummas</p>
+    <form action="blank" method="post">
+
+
+
+    </form>
 </body>
 </html>
