feat: add background image with styling to site

--- a/index.html
+++ b/index.html
@@ -8,15 +8,23 @@
     <title>Sign-Up Form</title>
 </head>
 <body>
-    <p>welcome to big mummas</p>
-    <form action="blank" method="post">
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-    </form>
+
+    <div class="mainContainer">
+        <div class="leftContainer">
+            <img src="./images/mainimg2.jpg" class="mainImg" alt="">
+        </div>
+        <div class="rightContainer">
+            <form action="blank" method="post">
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </form>
+        </div>
+    </div>
+
 </body>
 </html>
