fix: refine styling for input form

--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
                     get started</p>
                 <p class="preFormText">You <em>know</em> you want to</p>
             </div>
-            <div class="formContainer">
-                <form class="signUpForm" action="blank" method="post">
+
+            <form class="signUpForm" action="blank" method="post">
+                <div class="formContainer">
+                    <p class="signUpText">Sign Up</p>
                     <ul>
                         <div class="formRow">
                             <li>
@@ -61,8 +63,10 @@
                         </div>
 
                     </ul>
-                </form>
-            </div>
+                </div>
+                <button class="submitButton"></button>
+            </form>
+            
 
         </div>
     </div>
