add: finish element styling

--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
 
                     </ul>
                 </div>
-                <button class="submitButton"></button>
+                <button type="submit" class="submitButton">Create Account</button>
+                <div class="loginContainer">
+                    <p>Already have an account?</p>
+                    <a class="rickRoll" href="https://www.youtube.com/watch?v=xvFZjo5PgG0&ab_channel=Duran">Log In</a>
+                </div>
             </form>
             
 
