fix: positioning of elements adjusted

--- a/index.html
+++ b/index.html
@@ -34,31 +34,31 @@
                         <div class="formRow">
                             <li>
                                 <label for="fname">First Name</label>
-                                <input class="inputBox" type="text" id="fname" name="first_name" />
+                                <input class="inputBox" type="text" id="fname" name="first_name" required/>
                             </li>
                             <li>
                                 <label for="lname">Last Name</label>
-                                <input class="inputBox" type="text" id="lname" name="last_name" />
+                                <input class="inputBox" type="text" id="lname" name="last_name" required/>
                             </li>
                         </div>
                         <div class="formRow">
                             <li>
                                 <label for="email">Email</label>
-                                <input class="inputBox" type="email" id="mail" name="user_email" />
+                                <input class="inputBox" type="email" id="mail" name="user_email" required/>
                             </li>
                             <li>
                                 <label for="phone">Phone Number</label>
-                                <input class="inputBox" type="text" id="phone" name="user_phone_number" />
+                                <input class="inputBox" type="text" id="phone" name="user_phone_number" required/>
                             </li>
                         </div>
                         <div class="formRow">
                             <li>
                                 <label for="password">Password</label>
-                                <input class="inputBox" type="password" id="password" name="user_password" />
+                                <input class="inputBox" type="password" id="password" name="user_password" required/>
                             </li>
                             <li>
                                 <label for="confirmPassword">Confirm Password</label>
-                                <input class="inputBox" type="password" id="confirmPassword" name="confirm_password" />
+                                <input class="inputBox" type="password" id="confirmPassword" name="confirm_password" required/>
                             </li>
                         </div>
 
@@ -67,7 +67,7 @@
                 <button type="submit" class="submitButton">Create Account</button>
                 <div class="loginContainer">
                     <p>Already have an account?</p>
-                    <a class="rickRoll" href="https://www.youtube.com/watch?v=xvFZjo5PgG0&ab_channel=Duran">Log In</a>
+                    <a class="rickRoll" href="https://www.youtube.com/watch?v=xvFZjo5PgG0&ab_channel=Duran" target="_blank">Log In</a>
                 </div>
             </form>
             
