feat: add basic frontend validation

--- a/index.html
+++ b/index.html
@@ -33,31 +33,31 @@
                     <ul>
                         <div class="formRow">
                             <li>
-                                <label for="fname">First Name</label>
-                                <input class="inputBox" type="text" id="fname" name="first_name" required/>
+                                <label for="fname">*First Name</label>
+                                <input class="inputBox" minlength="2" maxlength="15" type="text" id="fname" name="first_name" required/>
                             </li>
                             <li>
-                                <label for="lname">Last Name</label>
-                                <input class="inputBox" type="text" id="lname" name="last_name" required/>
+                                <label for="lname">*Last Name</label>
+                                <input class="inputBox" minlength="2" maxlength="15" type="text" id="lname" name="last_name" required/>
                             </li>
                         </div>
                         <div class="formRow">
                             <li>
-                                <label for="email">Email</label>
+                                <label for="email">*Email</label>
                                 <input class="inputBox" type="email" id="mail" name="user_email" required/>
                             </li>
                             <li>
-                                <label for="phone">Phone Number</label>
-                                <input class="inputBox" type="text" id="phone" name="user_phone_number" required/>
+                                <label for="phone">*Phone Number</label>
+                                <input class="inputBox" minlength="9" maxlength="15" pattern="\(?\d{3}\)?[-.\s]?\d{3}[-.\s]?\d{4}" type="text" id="phone" name="user_phone_number" required/>
                             </li>
                         </div>
                         <div class="formRow">
                             <li>
-                                <label for="password">Password</label>
+                                <label for="password">*Password</label>
                                 <input class="inputBox" type="password" id="password" name="user_password" required/>
                             </li>
                             <li>
-                                <label for="confirmPassword">Confirm Password</label>
+                                <label for="confirmPassword">*Confirm Password</label>
                                 <input class="inputBox" type="password" id="confirmPassword" name="confirm_password" required/>
                             </li>
                         </div>
